# nvae-from-scratch

./: .gitignore  README.md  evaluation.py  pyproject.toml  train.py
configs/: celeba64.yaml  celeba64_aux.yaml  celeba64_freebits.yaml  celeba64_progressive.yaml  cifar10.yaml  cifar10_600ep.yaml  cifar10_8x3.yaml  cifar10_8x3_aux.yaml  cifar10_8x3_freebits.yaml  mnist.yaml
figures/: cherry.py  latent_interpolation.py  latent_space_exploration.py  reconstruction.py  sample.py
src/: model.py  utils.py
src/modules/: architecture.py  distributions.py
